# Codeforces-Arena

./: .gitignore  CMakeLists.txt  R.qrc  main.cpp  mainwindow.cpp  mainwindow.h
class/: cfapiworker.cpp  cfapiworker.h  circleimagelabel.cpp  circleimagelabel.h  handledialog.cpp  handledialog.h  mainwindow.cpp  mainwindow.h  profiles.cpp  profiles.h
